# jsyn

./: .gitignore  AGENTS.md  Benchmarks.hs  BotUpSearch.hs  ChangeLog.md  JsonExample.hs  Jsyn.hs  Jsyn.lhs  LC.hs  Main.hs  Main.lhs  README.md  Spec.hs  example1.json  jsyn.cabal
.golden/tests/test1.json.snapshot/: golden
.golden/tests/test10.json.snapshot/: actual  golden
.golden/tests/test11.json.snapshot/: actual
.golden/tests/test12.json.snapshot/: actual  golden
.golden/tests/test13.json.snapshot/: actual
.golden/tests/test15.json.snapshot/: golden
.golden/tests/test16.json.snapshot/: golden
.golden/tests/test17.json.snapshot/: golden
.golden/tests/test18.json.snapshot/: actual
.golden/tests/test20.json.snapshot/: actual  golden
.golden/tests/test22.json.snapshot/: golden
.golden/tests/test23.json.snapshot/: golden
.golden/tests/test24.json.snapshot/: actual  golden
.golden/tests/test25.json.snapshot/: actual  golden
.golden/tests/test5.json.snapshot/: golden
examples/: example1.json
rjsyn/: Cargo.toml  README.md  rustfmt.toml
rjsyn/benches/: synth.rs
rjsyn/src/: dsl.rs  json_example.rs  lib.rs  main.rs  synth.rs  types.rs
rjsyn/src/dsl/: sexpr.rs
rjsyn/src/types/: sexpr.rs
rjsyn/tests/: synth.rs
rjsyn/tests/snapshots/: synth__synthesizes_identity.snap
src/: Main.hs  Main.lhs
tests/: test1.json  test10.json  test12.json  test2.json  test20.json  test21.json  test22.json  test23.json  test24.json  test25.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
(+5 files in other folders)
