[package]
name = "rjsyn"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
indexmap = "2"
smallvec = "1"
clap = { version = "4", features = ["derive"] }
nom = "7"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "synth"
harness = false
